Fix radio component white dot in dark mode - use proper background token

--- a/src/components/ds-radio/ds-radio.css
+++ b/src/components/ds-radio/ds-radio.css
@@ -27,7 +27,7 @@
   border-radius: 50%;
   height: 18px;
   width: 18px;
-  background-color: var(--ds-disableable-color-background-base);
+  background-color: var(--ds-color-background-base);
 }
 
 .ds-radio-indicator.checked {
